--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -1,3 +1,16 @@
+.download{
+  background-color: #4299e1;
+  transition: 0.3s;
+  border-radius: 0.5rem;
+  color: white;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+}
+
+.download:hover {
+  background-color: #2b6cb0;
+  scale: 1.05;
+}
 .skill{
     position: relative;
     left: 50%;
